--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,20 @@
 version: '3'
 services:
+  mongo:
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
   server:
     build: ./server
     ports:
       - '3005:3005'
+    depends_on:
+      - mongo
   client:
     build: ./client
     ports:
       - '8005:8005'
+    depends_on:
+      - server
