--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "rdocker-server-client",
+	"name": "server",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
@@ -23,8 +23,6 @@
 	"dependencies": {
 		"@types/dotenv-safe": "^8.1.0",
 		"dotenv-safe": "^8.2.0",
-		"express": "^4.17.1",
-		"install": "^0.13.0",
-		"npm": "^6.13.6"
+		"express": "^4.17.1"
 	}
 }
